Fix calling set_command_line_wait() for set of loaded files

g_slist_foreach() call passed wrong arguments (GeditDocument*, NULL) to
set_command_line_wait(GeditApp*, GeditTab*).

https://bugzilla.gnome.org/show_bug.cgi?id=749068